--- a/app/src/main/res/layout/fragment_search_game.xml
+++ b/app/src/main/res/layout/fragment_search_game.xml
@@ -23,7 +23,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:weightSum="6"
+            android:weightSum="7"
             android:orientation="vertical">
             <TextView android:id="@+id/search_game_name"
                 android:layout_width="match_parent"
@@ -55,6 +55,13 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"/>
+            <ImageButton android:id="@+id/search_game_start"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:src="@drawable/button_search_game_start"
+                android:scaleType="fitCenter"
+                android:background="@android:color/transparent"/>
         </LinearLayout>
     </LinearLayout>
 
