--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="8"
+    android:weightSum="16"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:paddingTop="20dp"
         android:orientation="horizontal"
         android:weightSum="5"
@@ -28,7 +28,7 @@
     <ListView android:id="@+id/search_ListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="6"
         android:paddingLeft="20dp"
         android:paddingRight="20dp">
     </ListView>
@@ -36,13 +36,32 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
-        android:paddingTop="20dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="2">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="최근 검색한 게임"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="실시간 검색어"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7"
         android:orientation="horizontal"
         android:weightSum="2"
         android:gravity="center">
 
-        <ListView android:id="@+id/search_recently_ListView"
+        <ListView android:id="@+id/search_recent_ListView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -50,7 +69,7 @@
             android:paddingRight="5dp">
         </ListView>
 
-        <ListView android:id="@+id/search_hot_ListView"
+        <ListView android:id="@+id/search_RealTime_ListView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
