--- a/app/src/main/res/layout/fragment_search_game.xml
+++ b/app/src/main/res/layout/fragment_search_game.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="8">
+    android:weightSum="16">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="8"
         android:orientation="horizontal"
         android:weightSum="2">
         <ImageView android:id="@+id/search_game_image"
@@ -65,10 +65,29 @@
         </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:weightSum="8"
+        android:padding="5dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:text="게임 설명:"
+            android:gravity="center_vertical"/>
+        <ImageButton android:id="@+id/buttonDescriptionEdit"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:scaleType="centerCrop"
+            android:src="@drawable/button_edit"/>
+    </LinearLayout>
     <TextView android:id="@+id/search_game_description"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="7"
         android:padding="5dp"
         android:scrollbars="vertical"/>
     
