--- a/app/src/main/res/layout/activity_contact_listview_item.xml
+++ b/app/src/main/res/layout/activity_contact_listview_item.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_weight="1"
         android:weightSum="2">
 
         <TextView android:id="@+id/contact_ListView_name"
@@ -30,5 +31,11 @@
             android:gravity="center"/>
 
     </LinearLayout>
+
+    <ImageView android:id="@+id/imageView_select"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_check_box_outline_blank_black_24dp"/>
 
 </LinearLayout>
