--- a/app/src/main/res/layout/fragment_gaming.xml
+++ b/app/src/main/res/layout/fragment_gaming.xml
@@ -18,8 +18,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:padding="5dp"
-                android:text="00:00:00"/>
+                android:padding="5dp"/>
 
             <ImageButton android:id="@+id/addTracker"
                 android:layout_width="40dp"
