10/29 디자인 작업

--- a/app/src/main/res/layout/activity_contact_listview_item.xml
+++ b/app/src/main/res/layout/activity_contact_listview_item.xml
@@ -3,19 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="80dp"
+    android:background="@android:color/white">
 
     <ImageView android:id="@+id/contact_ListView_image"
         android:src="@drawable/context_image_base"
         android:padding="5dp"
         android:layout_width="80dp"
-        android:layout_height="80dp" />
+        android:layout_height="80dp"
+        android:background="@android:color/white"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="1"
         android:weightSum="2">
 
         <TextView android:id="@+id/contact_ListView_name"
@@ -31,11 +32,5 @@
             android:gravity="center"/>
 
     </LinearLayout>
-
-    <ImageView android:id="@+id/imageView_select"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_check_box_outline_blank_black_24dp"/>
 
 </LinearLayout>
