--- a/app/src/main/res/drawable-v24/back.xml
+++ b/app/src/main/res/drawable-v24/back.xml
@@ -4,10 +4,12 @@
     android:shape="rectangle" >
 
     <solid android:color="#FFFFFFFF" />
+    //android:color="#FFFFFFFF"
 
     <stroke
         android:width="5dp"
-        android:color="#FF000000" />
+        android:color="#215785"/>
+    //android:color="#FF000000"
 
     <padding
         android:left="5dp"
