--- a/app/src/main/res/layout/alertdialog_marker_entry.xml
+++ b/app/src/main/res/layout/alertdialog_marker_entry.xml
@@ -61,11 +61,13 @@
         android:orientation="horizontal"
         android:weightSum="1">
         <Button android:id="@+id/button_marker_entry_cancel"
+            android:layout_marginLeft="100dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="취소" />
 
         <Button android:id="@+id/button_marker_entry_enter"
+            android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="참가/참가취소" />
