--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="16"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:textStyle="bold"
+    android:background="@drawable/picture1">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        android:text="안녕하세요 xx님"
+        android:textStyle="bold"
+        android:textSize="9pt"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +24,8 @@
         android:weightSum="5"
         android:gravity="center">
 
-        <com.example.nomik.boardgamemanager.ClearEditText android:id="@+id/editText_search"
+        <EditText
+            android:id="@+id/editText_search"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
@@ -24,12 +34,17 @@
 
     </LinearLayout>
 
+
+
     <ListView android:id="@+id/search_ListView"
+
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6"
+        android:layout_weight="5.5"
         android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+        android:paddingRight="20dp"
+        android:paddingTop="50dp"
+        android:textStyle="bold">
     </ListView>
 
     <LinearLayout
@@ -38,27 +53,43 @@
         android:layout_weight="1"
         android:orientation="horizontal"
         android:weightSum="2">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="최근 검색한 게임"/>
 
+        //실시간 검색어 textview
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="실시간 검색어"/>
+            android:id="@+id/textview_realfind"/>
+
+        //최근 검색한 게임 textview
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:id="@+id/textview_hotfind"/>
+
+
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="7"
+        android:layout_weight="6"
         android:orientation="horizontal"
         android:weightSum="2"
-        android:gravity="center">
+        android:gravity="center"
+        android:paddingTop="50dp"
+        android:textStyle="bold">
+
+        <ListView android:id="@+id/search_RealTime_ListView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
+        </ListView>
 
         <ListView android:id="@+id/search_recent_ListView"
             android:layout_width="0dp"
@@ -68,13 +99,7 @@
             android:paddingRight="5dp">
         </ListView>
 
-        <ListView android:id="@+id/search_RealTime_ListView"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp">
-        </ListView>
+
 
     </LinearLayout>
 
