--- a/app/src/main/res/layout/fragment_search_game.xml
+++ b/app/src/main/res/layout/fragment_search_game.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="16">
+    android:weightSum="16"
+    android:background="@android:color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,7 +62,7 @@
                 android:layout_weight="1"
                 android:src="@drawable/button_search_game_start"
                 android:scaleType="fitCenter"
-                android:background="@android:color/transparent"/>
+                android:background="@android:color/white"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -82,7 +83,8 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:scaleType="centerCrop"
-            android:src="@drawable/button_edit"/>
+            android:src="@drawable/button_edit"
+            android:background="@android:color/white"/>
     </LinearLayout>
     <TextView android:id="@+id/search_game_description"
         android:layout_width="match_parent"
